# ROS_catkin

./: README.md
cuda/cuda-icp/: CMakeLists.txt
cuda/cudasegment/: CMakeLists.txt
hg_arm_bend_description/: CMakeLists.txt  package.xml
hg_arm_bend_description/config/: joint_names_hg_arm_bend_description.yaml
hg_arm_bend_description/launch/: display.launch  gazebo.launch
hg_arm_bend_description/meshes/: Link1.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  base_link.STL  finger1.STL  finger2.STL  gripper.STL
hg_arm_bend_description/urdf/: hg_arm_bend_description.csv  hg_arm_bend_description.urdf
hg_arm_bend_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hg_arm_bend_moveit_config/config/: fake_controllers.yaml  hg_arm_bend_description.srdf  joint_limits.yaml  ompl_planning.yaml
hg_arm_bend_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hg_arm_bend_description_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
hg_arm_hand_description/: CMakeLists.txt  package.xml
hg_arm_hand_description/launch/: display.launch  gazebo.launch
hg_arm_hand_description/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  base_link.STL  finger1.STL  finger2.STL  gripper.STL
hg_arm_hand_description/urdf/: hg_arm_hand_description.csv  hg_arm_hand_description.urdf
hg_arm_hand_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hg_arm_hand_moveit_config/config/: hg_arm_hand_description.srdf  joint_limits.yaml  ros_controllers.yaml
hg_arm_hand_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  hg_arm_hand_description_moveit_controller_manager.launch.xml  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  (+8 more)
hg_bend_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
hg_description/: package.xml
hg_descriptiontest/: CMakeLists.txt  package.xml
hg_hand/: CMakeLists.txt  package.xml
moveit_test/: CMakeLists.txt
robot_setup_tf/: CMakeLists.txt  package.xml
(+72 files in other folders)
