cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(Pointviewer)
find_package(PCL 1.2 REQUIRED)
find_package(CUDA REQUIRED)
INCLUDE(FindCUDA) 
include_directories(../../includes)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
$CUDA_HOME/lib64/libcudart.so
include_directories(/home/slishy/Code/cuda/cudasegment/lib)
add_executable(main main.cpp)
target_link_libraries(main /home/slishy/Code/cuda/cudasegment/lib/libcudasegmentation.so)
target_link_libraries(main ${PCL_LIBRARIES})